# farmrpg-etl

./: .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
.github/workflows/: main.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 076abff30c0c_initial_table_create_for_chat_messages.py  3489d064419e_unique_index_on_message_id.py  3d5a4f21a517_create_messages.py  420ff2a8e514_create_message.py  52f2a3e57590_add_user_tables.py  a3542154dbaa_firebase_uid_is_optional.py
src/farmrpg_etl/: __main__.py  events.py  firebase.py  http.py
src/farmrpg_etl/api/: __init__.py  auth.py
src/farmrpg_etl/bots/: __init__.py  base.py  firebase.py  ping.py
src/farmrpg_etl/db/: __init__.py  user.py
src/farmrpg_etl/firestore/: __init__.py  chat.py  user.py
src/farmrpg_etl/models/: chat.py  mailbox.py  user.py
src/farmrpg_etl/scrapers/: chat.py  mailbox.py  user.py
src/farmrpg_etl/utils/: datetime.py
src/farmrpg_mod/: __main__.py  events.py  http.py  tasks.py
src/farmrpg_mod/api/: __init__.py  auth.py
src/farmrpg_mod/db/: __init__.py  chat.py  models.py
src/farmrpg_mod/firestore/: chat.py
src/farmrpg_mod/models/: chat.py
src/farmrpg_mod/scrapers/: chat.py
test/: conftest.py
test/firestore/: test_chat.py
test/models/: test_user.py
test/scrapers/: test_chat.py  test_mailbox.py  test_user.py
test/scrapers/fixtures/: chat_day_rollover.html  chat_deleted.html  complex.html  flags.html  help.html  long.html  mailbox.html  members_staff.html  message.html  message_year.html  online.html  profile_ryber.html
(+4 files in other folders)
